fix: correct width in body and wrap

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  max-width: 1920px;
+  /* max-width: 1920px; */
   margin: 0 auto;
 }
 
@@ -39,7 +39,7 @@ header {
 
 .wrap {
   margin: 0 auto;
-  max-width: 98%;
+  max-width: 1920px;
   border: var(--temp-border);
 }
 
